tests/tests/snapshots/host_syntax_identity__identity_stmt__sim-peripherals__Echo.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(return (record-cons Ack (ok true)))
