tests/tests/snapshots/host_syntax_identity__identity_stmt__sim-peripherals__EvictCache.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(discard (cache-delete (field-access payload key)))
(return (record-cons Ack (ok true)))
