tests/tests/snapshots/host_syntax_identity__identity_stmt__sim-peripherals__IndexDoc.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(discard (search-index (field-access payload id) (field-access payload title)))
(return (record-cons Ack (ok true)))
