tests/tests/snapshots/host_syntax_identity__identity_stmt__sim-peripherals__SearchDocs.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(discard (search-query (field-access payload query)))
(return (record-cons Ack (ok true)))
